Migrate OAuth server to PostgreSQL and Redis.
Replace in-memory stores with Flyway schema, reactive Panache repos, and Redis cache; add docker-compose, PEM-backed JWT config, and async tests (188 passing).